<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
	android:background="@drawable/selecticon"
    android:padding="25.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

  <LinearLayout
    android:id="@+id/LinearLayout_KZM"
    android:layout_width="match_parent"
    android:layout_height="485dp"
    android:layout_marginTop="130dp"
    android:background="@drawable/custom_button5"
    android:gravity="center|top"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="8dp">

      <LinearLayout
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:background="@drawable/custom_button4"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
          android:layout_width="35dp"
          android:layout_height="35dp"
          android:src="@drawable/ic_play_arrow"
          app:tint="#FFFFFF"
          tools:ignore="ContentDescription" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:fontFamily="@font/lemon"
          android:text="@string/start_cheat"
          android:textColor="#FFFFFF" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/custom_buttonred"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
          android:layout_width="55dp"
          android:layout_height="40dp"
          android:src="@drawable/ic_stop"
          android:tint="#FFFFFF"
          tools:ignore="ContentDescription" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:fontFamily="@font/lemon"
          android:text="@string/stop_cheat"
          android:textColor="#FFFFFF" />

      </LinearLayout>

    </LinearLayout>

    <TextView
      android:id="@+id/st"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:text="@string/root_nonroot"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      android:textStyle="bold" />

    <RadioGroup
      android:id="@+id/radioMod"
      android:layout_width="323dp"
      android:layout_height="45dp"
      android:background="@drawable/sniper_border"
      android:orientation="horizontal"
      android:padding="8dp">


      <RadioButton
        android:id="@+id/radiobutton3"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:buttonTint="#FFFFFF"
        android:padding="4dp"
        android:text="Root"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

      <RadioButton
        android:id="@+id/radiobutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="#FFFFFF"
        android:padding="4dp"
        android:text="Non Root"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
      android:id="@+id/opa"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:text="@string/oparate_by"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      android:textStyle="bold" />

    <RadioGroup
      android:id="@+id/radioBit"
      android:layout_width="323dp"
      android:layout_height="42dp"
      android:background="@drawable/sniper_border"
      android:orientation="horizontal"
      android:padding="8dp">

      <RadioButton
        android:id="@+id/radiobutton5"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:buttonTint="#FFFFFF"
        android:padding="4dp"
        android:text="32 Bit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

      <RadioButton
        android:id="@+id/radiobutton6"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:buttonTint="#FFFFFF"
        android:padding="4dp"
        android:text="64 Bit"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    </RadioGroup>

    <TextView
      android:id="@+id/ver"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:text="@string/pubg_version"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      android:textStyle="bold" />

    <Spinner
      android:id="@+id/spinner"
      android:layout_width="153dp"
      android:layout_height="43dp"
      android:layout_marginTop="1dp"
      android:background="@drawable/sniper_border"
      android:spinnerMode="dropdown"
      android:textColor="#FFFFFF" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|bottom"
    android:orientation="vertical">


    <TextView
      android:id="@+id/textview5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="30dp"
      android:alpha="0.5"
      android:fontFamily="@font/runtime"
      android:padding="8dp"
      android:text="t.me/AmnesiaCheats"
      android:textColor="#FFFFFF"
      android:textSize="20sp" />

  </LinearLayout>


</LinearLayout>
